tests/slice_bad_negative_range.stderr
tests/slice_bad_negative_range.sl:4:17: error: SL2004: type mismatch
